--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,18 @@ body {
 .container {
   padding: 1em;
 }
+
+.sidebar {
+  max-width: 500px;
+}
+
+.sidebar h2 {
+  text-align: center;
+}
+
+.data {
+  font-family: monospace;
+  display: block;
+  white-space: pre;
+  margin: 1em 0px;
+}
