--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
 }
 
 .leaflet-popup-content p {
-    font-size: 10px;    
+    font-size: 12px;    
     margin: 0;
 }
+
+.leaflet-div-icon { background-color: transparent; border-color: transparent }
