--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,45 @@ body {
   margin: 0;
   padding: 0;
 
-  overflow: hidden; /* TODO fix this... this is for the loader... */
+  overflow: hidden; /* TODO: fix this... this is for the loader... */
 }
 
 .container {
+  color: #f7f7f7;
   padding: 1em;
 }
 
 .sidebar {
   max-width: 500px;
+  height: 100vh;
+
+  background-color: #719fbd;
+  background-image: linear-gradient(135deg, #719fbd 0%, #6f7192 100%);
+
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
 }
 
-.sidebar h2 {
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.sidebar h2,
+.center {
   text-align: center;
+}
+
+.move-up {
+  margin-top: -0.7em;
 }
 
 .data {
@@ -22,6 +48,19 @@ body {
   display: block;
   white-space: pre;
   margin: 1em 0px;
+}
+
+/* Weather data styling */
+.temperature {
+  display: block;
+}
+.temperature span {
+  color: #beedff;
+  position: relative;
+  font-size: 2.5em;
+  font-weight: 900;
+
+  top: 0.2em;
 }
 
 .loader {
@@ -39,7 +78,30 @@ body {
   width: 100%;
   height: 100vh;
   background-color: rgba(5, 5, 5, 0.5);
-  color: red;
+  background-color: #719fbd;
+  background-image: linear-gradient(135deg, #719fbd 0%, #6f7192 100%);
+
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+
+  color: #beedff;
 
   text-align: center;
+}
+
+.info {
+  font-weight: 400;
+  color: rgb(0, 225, 255);
+}
+
+.warning {
+  font-weight: 400;
+  color: rgb(255, 187, 0);
+}
+
+.force-bottom {
+  position: absolute;
+  margin: 0 auto;
+  bottom: 15px;
 }
