--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,19 @@ body {
   flex: 1;
 }
 
+.btn-marker {
+  text-align: center;
+  font-size: 0.95em;
+
+  color: #ffffff;
+
+  background-color: rgba(5, 5, 5, 0.5);
+  background-color: #719fbd;
+  background-image: linear-gradient(135deg, #719fbd 0%, #6f7192 100%);
+
+  cursor: pointer;
+}
+
 .left {
   float: left;
 }
@@ -159,4 +172,20 @@ body {
   position: absolute;
   margin: 0 auto;
   bottom: 15px;
+}
+
+.leaflet-popup-content-wrapper {
+  border-radius: 0;
+
+  background-color: rgba(5, 5, 5, 0.5);
+  background-color: #719fbd;
+  background-image: linear-gradient(135deg, #719fbd 0%, #6f7192 100%);
+
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+
+  color: #eeeeee;
+}
+.leaflet-container a.leaflet-popup-close-button {
+  color: red;
 }
